# cursor-utilization

./: .env.sample  .gitignore  AI_CODE_TRACKING.md  Dockerfile  README.md  cursor_metrics_dashboard.json  pyproject.toml  requirements.txt
.github/workflows/: cursor-utilization.yml
blueprints/: cursor_ai_code_change_record.json  cursor_ai_commit_record.json  cursor_commit_record.json  cursor_daily_commit_record.json  cursor_team_usage_record.json  cursor_usage_record.json  cursor_user_usage_record.json
src/: aggregate.py  config.py  cursor_adapter.py  main.py  models.py  port_exporter.py
